--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <title>Proyectos Constructivos</title>
-    <!-- Modal agregar proyectos -->
-     <link href="bootstrap/css/ventanamodalproyectos.css" rel="stylesheet">
     <!-- Bootstrap Core CSS -->
     <link href="bootstrap/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -51,16 +48,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="#page-top"></a>
+                        <a href="index.html"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Proyectos</a>
+                        <a class="page-scroll" href="indexp.html">Proyectos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Personas</a>
+                        <a class="page-scroll" href="indexpers.html">Personas</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Estado de Tareas</a>
+                        <a class="page-scroll" href="indexest.html">Estado de Tareas</a>
                     </li>
                      <li>
                         <a class="page-scroll" href="#about">Nuestra Empresa</a>
