--- a/modificarp.html
+++ b/modificarp.html
@@ -93,40 +93,11 @@
                 <h2>Mantenimiento de Proyectos</h2>
             </div>
 
-            <div class="container"></div>
-            <div id="exTab1" class="container"> 
-            <ul  class="nav nav-pills">
-                <li class="active">
-                <a  href="#1a" data-toggle="tab">Estado de Proyectos</a>
-                </li>
-                <li><a href="#2a" data-toggle="tab">Agregar Proyectos</a>
-                </li>
-            </ul>
-            <div class="tab-content clearfix">
-                <div class="tab-pane active" id="1a">
-                  <table id="tblProyectos" class="table table-striped">
-                    <thead>
-                      <tr>
-                        <th>Id</th>
-                        <th>Nombre</th>
-                        <th>Icono</th>
-                        <th>Fecha de Inicio</th>
-                        <th>Número de Personas</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                        
-                    </tbody>
-                  </table>
-                </div>
-            <div class="tab-pane" id="2a">
-                    <div class="container">
-
     <form class="well form-horizontal" action=" " method=""  id="contact_form">
     <fieldset>
 
         <!-- Form Name --> 
-        <legend>Formulario de Nuevo Proyecto</legend>
+        <legend>Formulario de Modificar Proyecto</legend>
         <!-- Text input-->
 
         <div class="form-group">
@@ -187,19 +158,17 @@
         <div class="form-group">
             <label class="col-md-4 control-label"></label>
         <div class="col-md-4">
-            <button id="btnRegistrar" class="btn btn-warning" >Guardar <span class="glyphicon glyphicon-send"></span></button>
+            <button id="btnModificar" class="btn btn-warning" >Modificar <span class="glyphicon glyphicon-send"></span></button>
         </div>
-</div>
+        </div>
 
-</fieldset>
+    </fieldset>
 </form>
 </div>
     </div><!-- /.container -->
 
     <!-- jQuery -->
-    <script src="./js/mostrarproyectos.js"></script>
     <script src="./js/jquery-2.2.4.min.js"></script>
-    <script src="./js/proyectos.js"></script>  
     <script src="./bootstrap/js/formulario.js"></script>
     <script src="./bootstrap/vendor/jquery/jquery.min.js"></script>
     
