--- a/indexp.html
+++ b/indexp.html
@@ -112,6 +112,7 @@
                         <th>Icono</th>
                         <th>Fecha de Inicio</th>
                         <th>Número de Personas</th>
+                        <th>Modifica</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -156,7 +157,7 @@
                 <div class="col-md-4 inputGroupContainer">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-camera"></i></span>
-                        <input multiple type="file" id=txtIcono placeholder="Seleccione un Icono" class="file file-loading" data-allowed-file-extensions='["jpg", "png"]'>
+                        <input type="text" id="txtIcono" placeholder="Seleccione un Icono" class="form-control">
                     </div>
                 </div>
             </div>
@@ -197,8 +198,8 @@
     </div><!-- /.container -->
 
     <!-- jQuery -->
-    <script src="./js/mostrarproyectos.js"></script>
     <script src="./js/jquery-2.2.4.min.js"></script>
+    <script src="./js/mostrarproyectos.js"></script>   
     <script src="./js/proyectos.js"></script>  
     <script src="./bootstrap/js/formulario.js"></script>
     <script src="./bootstrap/vendor/jquery/jquery.min.js"></script>
