--- a/modificarp.html
+++ b/modificarp.html
@@ -113,7 +113,7 @@
 
         <div class="form-group">
           <label class="col-md-4 control-label" >Nombre Proyecto</label> 
-            <div class="col-md-4 inputGroupContainer">
+           <div class="col-md-4 inputGroupContainer">
             <div class="input-group">
                  <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                  <input type="text" id="txtNombre" placeholder="Nombre" class="form-control"  >
@@ -124,11 +124,11 @@
         <!-- Text input-->
           <div class="form-group">
             <label class="col-md-4 control-label">Icono</label>  
-                <div class="col-md-4 inputGroupContainer">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-camera"></i></span>
-                        <input multiple type="file" id=txtIcono placeholder="Seleccione un Icono" class="file file-loading" data-allowed-file-extensions='["jpg", "png"]'>
-                    </div>
+               <div class="col-md-4 inputGroupContainer">
+                <div class="input-group">
+                 <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                 <input type="text" id="txtIcono" placeholder="Buscar Imagen" class="form-control"  >
+            </div>
                 </div>
             </div>
         <!-- Text input-->
@@ -157,9 +157,9 @@
        <!-- Button -->
         <div class="form-group">
             <label class="col-md-4 control-label"></label>
-        <div class="col-md-4">
-            <button id="btnModificar" class="btn btn-warning" >Modificar <span class="glyphicon glyphicon-send"></span></button>
-        </div>
+            <div class="col-md-4">
+                <button id="btnModificar" class="btn btn-warning" >Modificar <span class="glyphicon glyphicon-send"></span></button>
+            </div>
         </div>
 
     </fieldset>
@@ -169,6 +169,7 @@
 
     <!-- jQuery -->
     <script src="./js/jquery-2.2.4.min.js"></script>
+    <script src="./js/modificarproyecto.js"></script>
     <script src="./bootstrap/js/formulario.js"></script>
     <script src="./bootstrap/vendor/jquery/jquery.min.js"></script>
     
