--- a/eliminarp.html
+++ b/eliminarp.html
@@ -93,39 +93,11 @@
                 <h2>Mantenimiento de Proyectos</h2>
             </div>
 
-            <div class="container"></div>
-            <div id="exTab1" class="container"> 
-            <ul  class="nav nav-pills">
-                <li class="active">
-                <a  href="#1a" data-toggle="tab">Estado de Proyectos</a>
-                </li>
-                <li><a href="#2a" data-toggle="tab">Agregar Proyectos</a>
-                </li>
-            </ul>
-            <div class="tab-content clearfix">
-                <div class="tab-pane active" id="1a">
-                  <table id="tblProyectos" class="table table-striped">
-                    <thead>
-                      <tr>
-                        <th>Id</th>
-                        <th>Nombre</th>
-                        <th>Icono</th>
-                        <th>Fecha de Inicio</th>
-                      </tr>
-                    </thead>
-                    <tbody id="tblProyectos">
-                        
-                    </tbody>
-                  </table>
-                </div>
-            <div class="tab-pane" id="2a">
-                    <div class="container">
-
     <form class="well form-horizontal" action=" " method=""  id="contact_form">
     <fieldset>
 
         <!-- Form Name --> 
-        <legend>Formulario de Nuevo Proyecto</legend>
+        <legend>Formulario de Modificar Proyecto</legend>
         <!-- Text input-->
 
         <div class="form-group">
@@ -141,7 +113,7 @@
 
         <div class="form-group">
           <label class="col-md-4 control-label" >Nombre Proyecto</label> 
-            <div class="col-md-4 inputGroupContainer">
+           <div class="col-md-4 inputGroupContainer">
             <div class="input-group">
                  <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                  <input type="text" id="txtNombre" placeholder="Nombre" class="form-control"  >
@@ -152,11 +124,11 @@
         <!-- Text input-->
           <div class="form-group">
             <label class="col-md-4 control-label">Icono</label>  
-                <div class="col-md-4 inputGroupContainer">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-camera"></i></span>
-                        <input type="text" id="txtIcono" placeholder="Seleccione un Icono" class="form-control">
-                    </div>
+               <div class="col-md-4 inputGroupContainer">
+                <div class="input-group">
+                 <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                 <input type="text" id="txtIcono" placeholder="Buscar Imagen" class="form-control"  >
+            </div>
                 </div>
             </div>
         <!-- Text input-->
@@ -175,22 +147,18 @@
         <div class="form-group">
             <label class="col-md-4 control-label"></label>
             <div class="col-md-4">
-                <button id="Registrar" 
-                    class="btn btn-warning" >Guardar <span class="glyphicon glyphicon-floppy-disk"> 
-                    </span>
-                </button>
+                <button id="btnElimina" class="btn btn-warning" >Eliminar <span class="glyphicon glyphicon-trash"></span></button>
             </div>
         </div>
 
-</fieldset>
+    </fieldset>
 </form>
 </div>
     </div><!-- /.container -->
 
     <!-- jQuery -->
-
-    <script src="./js/jquery-2.2.4.min.js"></script>  
-    <script src="./js/proyectos.js"></script> 
+    <script src="./js/jquery-2.2.4.min.js"></script>
+    <script src="./js/eliminarp.js"></script>
     <script src="./bootstrap/js/formulario.js"></script>
     <script src="./bootstrap/vendor/jquery/jquery.min.js"></script>
     
