--- a/indexp.html
+++ b/indexp.html
@@ -97,7 +97,7 @@
             <div id="exTab1" class="container"> 
             <ul  class="nav nav-pills">
                 <li class="active">
-                <a  href="#1a" data-toggle="tab">Estado de Proyectos</a>
+                <a  href="#1a" data-toggle="tab">Tabla de Proyectos</a>
                 </li>
                 <li><a href="#2a" data-toggle="tab">Agregar Proyectos</a>
                 </li>
@@ -190,7 +190,7 @@
     <!-- jQuery -->
 
     <script src="./js/jquery-2.2.4.min.js"></script>  
-    <script src="./js/proyectos.js"></script> 
+    <script src="./js/Proyectos/proyectos.js"></script> 
     <script src="./bootstrap/js/formulario.js"></script>
     <script src="./bootstrap/vendor/jquery/jquery.min.js"></script>
     
