--- a/eliminarestado.html
+++ b/eliminarestado.html
@@ -86,68 +86,57 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3 class="section-heading">Proyectos</h3>
+                    <h3 class="section-heading">Estado de Tareas</h3>
                 </div>
             </div>
             <div class="row text-center">
-                <h2>Mantenimiento de Proyectos</h2>
+                <h2>Mantenimiento de Estados</h2>
             </div>
 
     <form class="well form-horizontal" action=" " method=""  id="contact_form">
     <fieldset disabled>
 
         <!-- Form Name --> 
-        <legend>Formulario de Eliminación de Proyecto</legend>
+        <legend>Formulario de Eliminación Estados</legend>
         <!-- Text input-->
 
         <div class="form-group">
-          <label class="col-md-4 control-label">ID Proyecto</label>  
+          <label class="col-md-4 control-label">ID Estado</label>  
           <div class="col-md-4 inputGroupContainer">
           <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-info-sign"></i></span>
-          <input type="text" id="txtId" placeholder="ID del Proyecto" class="form-control" onkeypress="return valida(event)"> 
+          <input type="text" id="txtId" placeholder="ID Estado" class="form-control" onkeypress="return valida(event)"> 
           </div>
           </div>
         </div>
         <!-- Text input-->
 
         <div class="form-group">
-          <label class="col-md-4 control-label" >Nombre Proyecto</label> 
+          <label class="col-md-4 control-label" >Descripción</label> 
            <div class="col-md-4 inputGroupContainer">
             <div class="input-group">
-                 <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                 <input type="text" id="txtNombre" placeholder="Nombre" class="form-control"  >
+                 <span class="input-group-addon"><i class="glyphicon glyphicon-list-alt"></i></span>
+                 <input type="text" id="txtDescrip" placeholder="Descripción" class="form-control"  >
             </div>
           </div>
         </div>
 
         <!-- Text input-->
           <div class="form-group">
-            <label class="col-md-4 control-label">Icono</label>  
+            <label class="col-md-4 control-label">Ord. Tarea</label>  
                <div class="col-md-4 inputGroupContainer">
                 <div class="input-group">
-                 <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                 <input type="text" id="txtIcono" placeholder="Buscar Imagen" class="form-control"  >
+                 <span class="input-group-addon"><i class="glyphicon glyphicon-sort-by-attributes"></i></span>
+                 <input type="text" id="txtOrden" placeholder="Orden de Tarea" class="form-control"  >
             </div>
                 </div>
             </div>
-        <!-- Text input-->
-               
-        <div class="form-group">
-          <label class="col-md-4 control-label">Fecha de Inicio</label>  
-            <div class="col-md-4 inputGroupContainer">
-            <div class="input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                <input type="text" id="txtFecha" placeholder="Fecha" class="form-control" >
-            </div>
-          </div>
-        </div>
-        </fieldset>
+            </fieldset>
        <!-- Button -->
         <div class="form-group">
             <label class="col-md-4 control-label"></label>
             <div class="col-md-4">
-                <button id="btnElimina" class="btn btn-warning" >Eliminar <span class="glyphicon glyphicon-trash"></span></button>
+                <button id="btnElimina" class="btn btn-warning" >Modificar <span class="glyphicon glyphicon-trash"></span></button>
             </div>
         </div>
 
@@ -158,7 +147,7 @@
 
     <!-- jQuery -->
     <script src="./js/jquery-2.2.4.min.js"></script>
-    <script src="./js/Proyectos/eliminarp.js"></script>
+    <script src="./js/Estados/eliminarestado.js"></script>
     <script src="./bootstrap/js/formulario.js"></script>
     <script src="./bootstrap/vendor/jquery/jquery.min.js"></script>
     
