--- a/eliminarpers.html
+++ b/eliminarpers.html
@@ -81,41 +81,40 @@
         <!-- /.container-fluid -->
     </nav>
 
-            <!-- Sesion de Proyectos -->
+            <!-- Sesion de Personas -->
     <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3 class="section-heading">Proyectos</h3>
+                    <h3 class="section-heading">Personas</h3>
                 </div>
             </div>
             <div class="row text-center">
-                <h2>Mantenimiento de Proyectos</h2>
+                <h2>Mantenimiento de Personas</h2>
             </div>
 
     <form class="well form-horizontal" action=" " method=""  id="contact_form">
     <fieldset disabled>
 
         <!-- Form Name --> 
-        <legend>Formulario de Eliminación de Proyecto</legend>
+        <legend>Formulario de Eliminación de Personas</legend>
         <!-- Text input-->
-
-        <div class="form-group">
-          <label class="col-md-4 control-label">ID Proyecto</label>  
+   <div class="form-group">
+          <label class="col-md-4 control-label">ID Persona </label>  
           <div class="col-md-4 inputGroupContainer">
           <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-info-sign"></i></span>
-          <input type="text" id="txtId" placeholder="ID del Proyecto" class="form-control" onkeypress="return valida(event)"> 
+          <input type="text" id="txtId" placeholder="ID Persona" class="form-control" onkeypress="return valida(event)"> 
           </div>
           </div>
         </div>
         <!-- Text input-->
 
         <div class="form-group">
-          <label class="col-md-4 control-label" >Nombre Proyecto</label> 
-           <div class="col-md-4 inputGroupContainer">
+          <label class="col-md-4 control-label" >Nombre </label> 
+            <div class="col-md-4 inputGroupContainer">
             <div class="input-group">
-                 <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
+                 <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
                  <input type="text" id="txtNombre" placeholder="Nombre" class="form-control"  >
             </div>
           </div>
@@ -123,25 +122,15 @@
 
         <!-- Text input-->
           <div class="form-group">
-            <label class="col-md-4 control-label">Icono</label>  
-               <div class="col-md-4 inputGroupContainer">
-                <div class="input-group">
-                 <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                 <input type="text" id="txtIcono" placeholder="Buscar Imagen" class="form-control"  >
+            <label class="col-md-4 control-label">Avatar </label>  
+                <div class="col-md-4 inputGroupContainer">
+                  <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                    <input type="text" id="txtAvatar" placeholder="Avatar" class="form-control"  >
             </div>
                 </div>
             </div>
-        <!-- Text input-->
-               
-        <div class="form-group">
-          <label class="col-md-4 control-label">Fecha de Inicio</label>  
-            <div class="col-md-4 inputGroupContainer">
-            <div class="input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                <input type="text" id="txtFecha" placeholder="Fecha" class="form-control" >
-            </div>
-          </div>
-        </div>
+
         </fieldset>
        <!-- Button -->
         <div class="form-group">
@@ -158,7 +147,7 @@
 
     <!-- jQuery -->
     <script src="./js/jquery-2.2.4.min.js"></script>
-    <script src="./js/Proyectos/eliminarp.js"></script>
+    <script src="./js/Personas/eliminarpers.js"></script>
     <script src="./bootstrap/js/formulario.js"></script>
     <script src="./bootstrap/vendor/jquery/jquery.min.js"></script>
     
