--- a/vistadeestado.html
+++ b/vistadeestado.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <body style="background-color:black;">  
+    <body style="background-color:gray;">  
     <title>Proyectos Constructivos</title>
     
     <!-- Bootstrap Core CSS -->
@@ -30,7 +30,8 @@
     <link href="./bootstrap/css/agency.min.css" rel="stylesheet">
     <!-- Modal agregar proyectos -->
     <link rel="stylesheet" type="text/css" href="./bootstrap/css/ventanamodalproyectos.css">
-    <link href="./bootstrap/css/estilos.css">
+    <link rel="stylesheet" href="./bootstrap/css/estilos.css">
+   
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
