--- a/indexp.html
+++ b/indexp.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <body style="background-color:black;">  
+    <body style="background-color:gray;">  
     <title>Proyectos Constructivos</title>
     
     <!-- Bootstrap Core CSS -->
@@ -28,18 +28,12 @@
 
     <!-- Theme CSS -->
     <link href="./bootstrap/css/agency.min.css" rel="stylesheet">
+    <link href="./bootstrap/css/estilo.css" rel="stylesheet">
+    
     <!-- Modal agregar proyectos -->
-    <link rel="stylesheet" type="text/css" href="./bootstrap/css/ventanamodalproyectos.css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
-
 <body id="page-top" class="index">
 
     <!-- Navigation -->
@@ -47,7 +41,7 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle"
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="index.html">Inicio</a>
@@ -69,11 +63,13 @@
                         <a class="page-scroll" href="indexest.html">Estado de Tareas</a>
                     </li>
                      <li>
-                        <a class="page-scroll" href="#about">Nuestra Empresa</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contactenos</a>
-                    </li>
+                        <a class="section-heading" href="#about">Reportes</a>
+                            <ul>
+                                <li><a href=".html">Estado</a></li>
+                                <li><a href="A3.html">Proyecto</a></li>
+                                <li><a href="reportepersona.html">Persona</a></li>
+                            </ul>
+                    </li>   
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
