--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -11,7 +11,6 @@
     <title>Proyectos Constructivos</title>
     <!-- Bootstrap Core CSS -->
     <link href="bootstrap/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom Fonts -->
     <link href="bootstrap/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -20,6 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
+    <link href="./bootstrap/css/estilo.css" rel="stylesheet">
     <link href="bootstrap/css/agency.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -54,17 +54,19 @@
                         <a class="page-scroll" href="indexp.html">Proyectos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="indexpers.html">Personas</a>
+                        <a class="section-heading" href="indexpers.html">Personas</a>
                     </li>
-                    <li>
+                     <li>
                         <a class="page-scroll" href="indexest.html">Estado de Tareas</a>
                     </li>
                      <li>
-                        <a class="page-scroll" href="#about">Nuestra Empresa</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contactenos</a>
-                    </li>
+                        <a class="section-heading" href="#about">Reportes</a>
+                           <ul>
+                                <li><a href="reporteestado.htm">Estado</a></li>
+                                <li><a href="reporteproyecto.html">Proyecto</a></li>
+                                <li><a href="reportepersona.html">Persona</a></li>
+                            </ul>
+                    </li> 
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
