--- a/vistadeestado.html
+++ b/vistadeestado.html
@@ -31,13 +31,7 @@
     <!-- Modal agregar proyectos -->
     <link rel="stylesheet" type="text/css" href="./bootstrap/css/ventanamodalproyectos.css">
     <link rel="stylesheet" href="./bootstrap/css/estilos.css">
-   
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="./bootstrap/css/estilo.css" rel="stylesheet">
 
 </head>
 
@@ -48,7 +42,7 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle"
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="index.html">Inicio</a>
@@ -70,11 +64,13 @@
                         <a class="page-scroll" href="indexest.html">Estado de Tareas</a>
                     </li>
                      <li>
-                        <a class="page-scroll" href="#about">Nuestra Empresa</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contactenos</a>
-                    </li>
+                        <a class="section-heading" href="#about">Reportes</a>
+                            <ul>
+                                <li><a href=".html">Estado</a></li>
+                                <li><a href="A3.html">Proyecto</a></li>
+                                <li><a href="reportepersona.html">Persona</a></li>
+                            </ul>
+                    </li> 
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -127,8 +123,8 @@
                     <tbody id="tblEstadoProyectos" >
                         
                     </tbody>
-
                  </table>
+                 <div id="graph-container"></div>
                 </div>
                 </div>
             <div class="tab-pane" id="2a">
@@ -202,7 +198,6 @@
     <script src="./js/script.js"></script> 
     <script src="./js/redips-drag-min.js"></script>  
     <script src="./js/headerEstados.js"></script> 
-
     <script src="./bootstrap/js/formulario.js"></script>
     <script src="./bootstrap/vendor/jquery/jquery.min.js"></script>
     
