--- a/indexest.html
+++ b/indexest.html
@@ -127,7 +127,7 @@
           <div class="col-md-4 inputGroupContainer">
           <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-info-sign"></i></span>
-          <input type="text" id="txtId" placeholder="ID Estado Tarea" class="form-control" onkeypress="return valida(event)"> 
+          <input type="text" id="txtId" placeholder="ID Estado Tarea" class="form-control" onkeypress="return valida(event)" required/> 
           </div>
           </div>
         </div>
@@ -139,7 +139,7 @@
             <div class="input-group">
                  <span class="input-group-addon"><i class="glyphicon glyphicon-list-alt
                  "></i></span>
-                 <input type="text" id="txtDescrip" placeholder="Descripción" class="form-control"  >
+                 <input type="text" id="txtDescrip" placeholder="Descripción" class="form-control"  required/>
             </div>
           </div>
         </div>
@@ -151,7 +151,7 @@
             <div class="col-md-4 inputGroupContainer">
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-sort-by-attributes"></i></span>
-                <input type="text" id="txtOrden" placeholder="Orden Tarea" class="form-control" >
+                <input type="text" id="txtOrden" placeholder="Orden Tarea" class="form-control" required/>
             </div>
           </div>
         </div>
