--- a/modificarp.html
+++ b/modificarp.html
@@ -140,7 +140,7 @@
         <div class="form-group">
             <label class="col-md-4 control-label"></label>
             <div class="col-md-4">
-                <button id="btnModifica" onclick="savemensajeToLocalStorage( $('input#txtId').val(), $('input#txtNombre').val(), $('input#txtIcono').val(), $('input#txtFecha').val()) ;" class="btn btn-warning" >Modificar <span class="glyphicon glyphicon-refresh"></span></button>
+                <button id="btnModifica"  class="btn btn-warning" >Modificar <span class="glyphicon glyphicon-refresh"></span></button>
             </div>
         </div>
 
