--- a/reporteestado.htm
+++ b/reporteestado.htm
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3 class="section-heading">Reportes por Estado de Tareas</h3>
+                    <h3 class="section-heading">Reportes por Persona</h3>
                 </div>
             </div>
              <div clas = "row">
@@ -88,7 +88,7 @@
             <div id="exTab1" class="container"> 
             <ul  class="nav nav-pills">
                 <li class="active">
-                <a  href="#1a" data-toggle="tab">Reportes por Estado de Tareas</a>
+                <a  href="#1a" data-toggle="tab">Reporte de Personas</a>
                 </li>
 
             </ul>
@@ -106,8 +106,8 @@
           <span class="input-group-addon"><i class="glyphicon glyphicon-info-sign"></i></span>
           <label class="col-md-4 control-label"></label>
           <div>
-            <select class="form-control" id="encargado">
-                
+            <select class="form-control" id="estados">
+                Generar();
             </select>
           </div>
           </div>
@@ -117,7 +117,7 @@
             <label class="col-md-4 control-label"></label>
             <div class="col-md-4">
                 <button id="Generar" 
-                    class="btn btn-warning" >Generar Reporte <span class="glyphicon glyphicon-stats"> 
+                    class="btn btn-success" >Generar Reporte <span class="glyphicon glyphicon-stats"> 
                     </span>
                 </button>
             </div>
@@ -140,7 +140,7 @@
     <!-- jQuery -->
 
     <script src="./js/jquery-2.2.4.min.js"></script> 
-    <script src="./js/Personas/repersonas.js"></script> 
+    <script src="./js/Estados/reestados.js"></script> 
     <script src="./js/highcharts.js"></script>
     <script src="./bootstrap/vendor/jquery/jquery.min.js"></script>
     
