--- a/eliminarp.html
+++ b/eliminarp.html
@@ -141,7 +141,7 @@
         <div class="form-group">
             <label class="col-md-4 control-label"></label>
             <div class="col-md-4">
-                <button id="btnElimina" class="btn btn-warning" >Eliminar <span class="glyphicon glyphicon-trash"></span></button>
+                <button id="btnElimina" class="btn btn-danger" >Eliminar <span class="glyphicon glyphicon-trash"></span></button>
             </div>
         </div>
 
