--- a/reporteproyecto.html
+++ b/reporteproyecto.html
@@ -117,7 +117,7 @@
             <label class="col-md-4 control-label"></label>
             <div class="col-md-4">
                 <button id="Generar" 
-                    class="btn btn-warning" >Generar Reporte <span class="glyphicon glyphicon-stats"> 
+                    class="btn btn-success" >Generar Reporte <span class="glyphicon glyphicon-stats"> 
                     </span>
                 </button>
             </div>
