--- a/indexest.html
+++ b/indexest.html
@@ -57,14 +57,14 @@
                     <li>
                         <a class="section-heading" href="indexpers.html">Personas</a>
                     </li>
-                    <li>
+                     <li>
                         <a class="page-scroll" href="indexest.html">Estado de Tareas</a>
                     </li>
                      <li>
                         <a class="section-heading" href="#about">Reportes</a>
-                            <ul>
-                                <li><a href=".html">Estado</a></li>
-                                <li><a href="A3.html">Proyecto</a></li>
+                           <ul>
+                                <li><a href="reporteestado.htm">Estado</a></li>
+                                <li><a href="reporteproyecto.html">Proyecto</a></li>
                                 <li><a href="reportepersona.html">Persona</a></li>
                             </ul>
                     </li> 
