--- a/modificarp.html
+++ b/modificarp.html
@@ -33,7 +33,7 @@
 </head>
 <body id="page-top" class="index">
 
-    <!-- Navigation -->
+        <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -56,14 +56,14 @@
                     <li>
                         <a class="section-heading" href="indexpers.html">Personas</a>
                     </li>
-                    <li>
+                     <li>
                         <a class="page-scroll" href="indexest.html">Estado de Tareas</a>
                     </li>
                      <li>
                         <a class="section-heading" href="#about">Reportes</a>
-                            <ul>
-                                <li><a href=".html">Estado</a></li>
-                                <li><a href="A3.html">Proyecto</a></li>
+                           <ul>
+                                <li><a href="reporteestado.htm">Estado</a></li>
+                                <li><a href="reporteproyecto.html">Proyecto</a></li>
                                 <li><a href="reportepersona.html">Persona</a></li>
                             </ul>
                     </li> 
@@ -73,7 +73,6 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-
             <!-- Sesion de Proyectos -->
     <section id="services">
         <div class="container">
@@ -131,7 +130,7 @@
             <div class="col-md-4 inputGroupContainer">
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                <input type="text" id="txtFecha"  placeholder="Fecha" class="form-control" >
+                <input type="date" id="txtFecha"  placeholder="Fecha" class="form-control" >
             </div>
           </div>
         </div>
