--- a/vistadeestado.html
+++ b/vistadeestado.html
@@ -45,7 +45,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html">Inicio</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Inicio</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -60,14 +60,14 @@
                     <li>
                         <a class="section-heading" href="indexpers.html">Personas</a>
                     </li>
-                    <li>
+                     <li>
                         <a class="page-scroll" href="indexest.html">Estado de Tareas</a>
                     </li>
                      <li>
                         <a class="section-heading" href="#about">Reportes</a>
-                            <ul>
-                                <li><a href=".html">Estado</a></li>
-                                <li><a href="A3.html">Proyecto</a></li>
+                           <ul>
+                                <li><a href="reporteestado.htm">Estado</a></li>
+                                <li><a href="reporteproyecto.html">Proyecto</a></li>
                                 <li><a href="reportepersona.html">Persona</a></li>
                             </ul>
                     </li> 
@@ -202,7 +202,7 @@
 
     <script src="./js/jquery-2.2.4.min.js"></script>  
     <script src="./js/headerEstados.js"></script>
-   
+    
    
     
     <script src="./bootstrap/js/formulario.js"></script>
