--- a/modificarpers.html
+++ b/modificarpers.html
@@ -34,7 +34,7 @@
 
 <body id="page-top" class="index">
 
-    <!-- Navigation -->
+       <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -57,14 +57,14 @@
                     <li>
                         <a class="section-heading" href="indexpers.html">Personas</a>
                     </li>
-                    <li>
+                     <li>
                         <a class="page-scroll" href="indexest.html">Estado de Tareas</a>
                     </li>
                      <li>
                         <a class="section-heading" href="#about">Reportes</a>
-                            <ul>
-                                <li><a href=".html">Estado</a></li>
-                                <li><a href="A3.html">Proyecto</a></li>
+                           <ul>
+                                <li><a href="reporteestado.htm">Estado</a></li>
+                                <li><a href="reporteproyecto.html">Proyecto</a></li>
                                 <li><a href="reportepersona.html">Persona</a></li>
                             </ul>
                     </li> 
