--- a/reporteestado.htm
+++ b/reporteestado.htm
@@ -57,14 +57,14 @@
                     <li>
                         <a class="section-heading" href="indexpers.html">Personas</a>
                     </li>
-                    <li>
+                     <li>
                         <a class="page-scroll" href="indexest.html">Estado de Tareas</a>
                     </li>
                      <li>
                         <a class="section-heading" href="#about">Reportes</a>
-                            <ul>
-                                <li><a href=".html">Estado</a></li>
-                                <li><a href="A3.html">Proyecto</a></li>
+                           <ul>
+                                <li><a href="reporteestado.htm">Estado</a></li>
+                                <li><a href="reporteproyecto.html">Proyecto</a></li>
                                 <li><a href="reportepersona.html">Persona</a></li>
                             </ul>
                     </li> 
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h3 class="section-heading">Reportes por Persona</h3>
+                    <h3 class="section-heading">Reportes por Estado</h3>
                 </div>
             </div>
              <div clas = "row">
@@ -88,7 +88,7 @@
             <div id="exTab1" class="container"> 
             <ul  class="nav nav-pills">
                 <li class="active">
-                <a  href="#1a" data-toggle="tab">Reporte de Personas</a>
+                <a  href="#1a" data-toggle="tab">Reporte de Estado</a>
                 </li>
 
             </ul>
@@ -100,7 +100,7 @@
     
           <!-- Combobox-->
 
-          <label class="col-md-4 control-label">Encargado(a):</label>  
+          <label class="col-md-4 control-label">Estado:</label>  
           <div class="col-md-4 inputGroupContainer">
           <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-info-sign"></i></span>
